Kakurin Yakudo/Kubernetes/manifest/rbac-quota.yaml
---
# Namespace - 네임스페이스
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    name: production
    environment: prod

---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    name: staging
    environment: staging
