Kakurin Yakudo/Kubernetes/manifest/service.yaml
---
# Service - ClusterIP (클러스터 내부에서만 접근)
apiVersion: v1
kind: Service
metadata:
  name: app-service-clusterip
  namespace: default
  labels:
    app: my-app
spec:
  type: ClusterIP
  # clusterIP: 10.96.0.1  # 고정 IP가 필요한 경우
  selector:
    app: my-app
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  # - name: https
  #   port: 443
  #   targetPort: 443
  #   protocol: TCP
  sessionAffinity: None
  # sessionAffinity: ClientIP
  # sessionAffinityConfig:
  #   clientIP:
  #     timeoutSeconds: 10800

---
# Service - LoadBalancer (외부에서 접근)
apiVersion: v1
kind: Service
metadata:
  name: app-service-loadbalancer
  namespace: default
  labels:
    app: my-app
spec:
  type: LoadBalancer
  selector:
    app: my-app
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  # externalTrafficPolicy: Local  # 클라이언트 IP 보존
  # loadBalancerIP: 203.0.113.1   # AWS/클라우드 환경에서 지원
  # loadBalancerSourceRanges:
  # - 203.0.113.0/24

---
# Service - NodePort (노드의 포트로 접근)
apiVersion: v1
kind: Service
metadata:
  name: app-service-nodeport
  namespace: default
  labels:
    app: my-app
spec:
  type: NodePort
  selector:
    app: my-app
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30080  # (30000-32767 범위)
    protocol: TCP
  sessionAffinity: None
